@@ -83,6 +83,7 @@ sunuo (0.3.2) unstable; urgency=low
   * upgraded log4net to 1.2.10
   * imported RunUO data and saves directory
   * run SunUO in a loop
+    - added Core.Shutdown() supporting the environment variable SUNUO_EXIT
 
  --
 
